# trajectory_planning

./: .gitignore  README.md  acados_ocpplane_model.json  effector.html  obstacles.csv  plot_analysis.py  radar_voxel.html  trajectory.csv  waypoints_15.csv  waypoints_25.csv  waypoints_35.csv
Skywalker DBSM/: ConvertData2RCS.py  scatter_plot_comparison.py  scatter_plot_generator.py  skywalker_analysis.py
c_generated_code/: Makefile  acados_sim_solver_plane_model.c  acados_sim_solver_plane_model.h  acados_solver.pxd  acados_solver_plane_model.c  acados_solver_plane_model.h  main_plane_model.c  main_sim_plane_model.c
data_analysis/: closed_set.pkl  path.pkl  plane_45front_90rear_plane_weight_0.csv  plane_45front_90rear_plane_weight_10.csv  plane_45front_90rear_plane_weight_15.csv  plane_45front_90rear_plane_weight_5.csv  plane_45s_plane_weight_0.csv  plane_45s_plane_weight_10.csv  post_analysis.py  (+7 more)
global_planner/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main  main.cpp  main_sas.cpp  readme.md  sim_astar.cpp
global_planner/docs/: boiler_plate.h  notes.md  notes_from_austin.md  spline_fitting.md
global_planner/include/: Astar.h  GridMap.h  PositionVector.h
global_planner/python/: analysis_example.py  c_space_radar.py  coarse_global_planner.py  coarse_planner.py  effector.html  goal_finder.py  graph_radar.py  obstacles.csv  path_traj.html  pickle_export_example.py  pickle_save_example.py  pickled_radars.py  plot_analysis.py  plot_rcs.py  post_analysis.py  radar_system.py  radar_system_sim.py  radar_system_sim_pkl.py  radar_unpickle.py  radar_voxel.html  show_fan.py  single_pickled_radar.py  single_radar_system.py  smooth_algorithm.py  sparse_astar.py  test_voxel.py  trajectory.csv  waypoints_15.csv  waypoints_35.csv  waypoints_40.csv
global_planner/python/info/: .~lock.rcs_hash.csv#  info.py  new_data.py  plane_roll.csv  plane_sig_hash.csv  sig_mat.csv  sig_mat_45.csv  sig_mat_45front_90rear.csv  sig_mat_45front_90rear_noseONzero.csv  signature_rpy.mat  test_rcs_hash.py
global_planner/python/radar/: fast_voxel_algorithm_2d.py  radar_class.py  radar_sys_equations.py  voxel_plot.py
global_planner/python/src/: DataContainer.py  GoalFinder.py  Grid.py  MaxPriorityQueue.py  Obstacle.py  PositionVector.py  Radar.py  Raytrace.py  SparseAstar.py  fast_voxel_algorithm_2d.py  radar_class.py  rotations_example.py  visualize_tool.py  voxel_plot_example.py
global_planner/python/src/Config/: radar_config.py
global_planner/python/tests/: detection_equations.py  heap_queue_test.py
global_planner/src/: Astar.cpp  GridMap.cpp  PositionVector.cpp
(+48 files in other folders)
